# VoiceTuT-TTS_with_small_update

./: .gitignore  PUBLISH.md  README.md  app.py  generate_samples.py  pyproject.toml
docs/: index.html
docs/audio/: README.md
examples/: 01_quickstart.ipynb  02_voice_cloning.ipynb  03_web_ui.ipynb
hf_model_card/: README.md
hf_space/: README.md  requirements.txt
reference_speakers/: references.json
tests/: test_normalization.py
voicetut_tts/: __init__.py  cli.py  engine.py  normalization.py  speakers.py
voicetut_tts/data/: diacritics.csv  names_en_ar.csv
